--- a/journal/modernized/03-letters.adoc
+++ b/journal/modernized/03-letters.adoc
@@ -92,7 +92,7 @@ Yes, and I could rejoice in the prospect of being engaged, though so very unwort
 in the service of Him to whom I desire to surrender myself entirely,
 and I hope I am willing to give up all things for His sake, remembering with gratitude,
 that the trials and sufferings of this present time "`are not
-worthy to be compared with the glory that shall be revealed.
+worthy to be compared with the glory that shall be revealed.`"
 
 This ride (from Gloucester to Birmingham) was one which I hope I shall long remember.
 A peace which "`passes all understanding,`" was permitted,
@@ -140,7 +140,7 @@ Supposed 1832.
 Feeling that my long continuance here is peculiarly uncertain, I do,
 my beloved J+++_______+++ wish, as much as possible, for my work to be accomplished.
 It is with this wish that I pen these few lines to my much loved and ever dear sister.
-When I am gone--when this mortal shall have put on
+When I am gone--"`when this mortal shall have put on
 immortality`"--may I entreat you to endeavour to follow,
 faithfully to follow, the guidance of the Lord; obey His still small voice within,
 which will assuredly lead you onwards in the path of life.
@@ -165,7 +165,7 @@ anticipated being much longer together here;
 but though I now believe it to be the divine will that it should be otherwise,
 our separation will not, I trust, be long.
 You must think of me; and may I beg you, as I have so often done,
-to set apart some time each day for waiting upon God`"--your duties to Him are higher,
+to set apart some time each day for waiting upon God--your duties to Him are higher,
 and of more importance than any other; you would find satisfaction in serving Him,
 and I do believe, before very long, you will find peace.
 Remind the dear children of what I have told them.
@@ -252,7 +252,7 @@ with the natural eye, to discern those things which can only be spiritually disc
 That you may indeed receive fully the Spirit which is of God,
 and be permitted thereby to know "`the things which are freely
 given us of God,`" that He may preserve you from all evil,
-and lead you forward in the way everlasting;`" that.
+and lead you forward in the way everlasting;`" that,
 He may strengthen you in all things to do His will, is, my endeared brother,
 the fervent prayer of your much attached sister.
 
@@ -462,7 +462,7 @@ of which we have now so many, shall be forever cast aside,
 and bright and glorious shall be the Christian`'s rest!
 Oh, if we are but permitted, at the close of time,
 to know a transition from its trials to the realms of everlasting blessedness;
-for the way, However painful, by which we have been led,
+for the way, however painful, by which we have been led,
 we shall know the song of thanksgiving to be put
 into our mouths--to Him who has redeemed us.
 With dearest love, your affectionately-attached sister.
@@ -540,7 +540,7 @@ by which, the apostle assures us, every man`'s work shall be tried.
 
 Many indeed are the cares which surround you,
 appearing particularly calculated to retard your progress in the way everlasting; but,
-my beloved mother, let me affectionately intreat you, not to permit them to do so.
+my beloved mother, let me affectionately entreat you, not to permit them to do so.
 Looking continually for help from above--casting your cares on Him who is able and
 willing to bear them--may you daily experience a renewal of strength,
 and be favoured to know, from time to time,
@@ -1084,7 +1084,7 @@ even to cry to you, "`Peace, peace, when there is no peace.`"
 No!
 I would not help to raise a barrier which must be broken down before
 an admission can be administered to any into the land of light;
-but I would intreat you to trust in the faithfulness of a "`covenant
+but I would entreat you to trust in the faithfulness of a "`covenant
 keeping God,`" and wholly and unreservedly give yourself unto Him.
 The retrospect of the past, I doubt not,
 is often clouded by the recollection of many sins of omission and commission.
@@ -1099,7 +1099,7 @@ Do not, oh do not, cast away your confidence,
 for I do assuredly believe that all things will work together for your good,
 and that you will be made meet for that inheritance which is "`incorruptible, undefiled,
 and that fades not away, reserved in heaven for those who are kept by the power of God,
-through faith, unto salvation!
+through faith, unto salvation!`"
 
 I feel most tenderly for your bodily sufferings, while I humbly trust,
 you are enabled to trace in them the hand of mercy,
@@ -1196,13 +1196,13 @@ oh that I could impress upon your heart a right
 sense of her weakness and inability to help you,
 as she would desire, in the heavenly way.
 While, I trust, we may know increasing union of spirit, I must, dearest Charles,
-intreat you to look from her to the Shepherd of Israel for help,
+entreat you to look from her to the Shepherd of Israel for help,
 and to depend wholly for guidance upon Him!
 Be more steadfast, my dear brother,
 in His service! more constantly seek the knowledge of His will,
 and ability to perform it!
 Oh I would that you should be "`complete in Christ,`" that "`He may be your all in all.`"
-I must intreat you, my beloved brother,
+I must entreat you, my beloved brother,
 to crave ability to commit me unreservedly to the care of Him,
 who has so mercifully cared for me all the days of my life, and who, I can still believe,
 will help me to my journey`'s end.
@@ -1248,7 +1248,7 @@ I feel quite ready to resort to any remedy my kind friend, G. D. F.,
 thinks likely to be beneficial;
 I feel sure he will kindly enter into the particulars of my case,
 and it is far more satisfactory to me that he
-should do to than any other person at a distance.
+should do so than any other person at a distance.
 Do not, however, imagine that from desiring this,
 I am at all anxious even for present increased ability for exertion:
 there are moments when,
@@ -1275,8 +1275,8 @@ one of the brightest gleams of light resting on my path,
 is produced by the precious hope,
 that I may be strengthened to bear the burdens of some inexpressibly dear to me,
 and thus "`fulfill the law of Christ!`"
-I feel as though I; could thankfully rejoice to be permitted to spread flowers on,
-or even to remove thorns from, the paths I of my many loved ones.
+I feel as though I could thankfully rejoice to be permitted to spread flowers on,
+or even to remove thorns from, the paths of my many loved ones.
 But as I write, I am renewedly made sensible of my own unworthiness, and I deeply feel,
 that of myself I am entirely unable to lend the
 helping hand to any of my fellow travellers,
@@ -1315,14 +1315,14 @@ I am engaged in writing to you for your birthday.
 All that a sister can desire of good for you, I believe I do on the present occasion;
 and perhaps my desires are the more fervent from believing,
 that this is the last on which I can address you in this manner.
-Yes, my much loved brother the last! for long before the return of another,
-my warfare will, we cannot but believe, be accomplished;
+Yes, my much loved brother! _the last!_ for long before the return of another,
+my warfare will (we cannot but believe) be accomplished;
 and through "`mercy infinite,`" I humbly trust,
 I shall have become one of the "`blessed inhabitants of Zion!`"
 And you, I trust, will feel another inducement to press forwards in the heavenly race.
 Oh how do I long that you may do so;
 and that you may be the guide and counsellor of our younger brothers.
-Dear H. my heart has often been filled with desires on his account--
+Dear Henry, my heart has often been filled with desires on his account--
 oh tell him that I trust he will give up his heart to the Lord!
 I must not, I believe, add more.
 Accept my dearest love, and give it to dear Henry.
