--- a/journal/original/02-journal.adoc
+++ b/journal/original/02-journal.adoc
@@ -90,7 +90,7 @@ a little note laid on the dressing-table would convey a sister`'s faithful warni
 It would be easy to record many traits of character
 which displayed themselves during this part of her life,
 and are fondly treasured up in the hearts of her surviving friends--
-but these are more fully exemplified in her after year?,
+but these are more fully exemplified in her after years,
 and shown too in the language of her own heart, as recorded by her own pen;
 and as it is our object to let the beloved departed speak, as far as possible,
 for herself,
@@ -145,7 +145,7 @@ several of which allude to the illness referred to:]
 
 1829, 8mo. 7th.--How does the time pass on, yet how regardless do we, many of us,
 seem of its rapid progress, as if this were to be our place of rest,
-but here how often we are reminded that we have no
+but here how often we are reminded that "`we have no
 continuing city;`" then how anxious we ought to be,
 to seek that city which hath foundations, "`whose maker and builder is God.`"
 
@@ -291,7 +291,7 @@ Fear not the cross, for that secures the crown.`"
 ____
 
 11mo. 8th, first day.--"`Come unto me all ye that are weary and heavy laden,
-and I will give you rest.
+and I will give you rest.`"
 Dear Saviour! may I come unto thee--I who feel so undeserving of thy mercy!
 Yes, even I may come to thee, for thou hast said that all may come unto thee;
 give me oh blessed Jesus, give me I humbly ask thee more faith to believe.
@@ -342,7 +342,7 @@ May I improve it, and oh may it be devoted to my Master`'s service.
 28th.--Very earnestly do I desire, this day,
 to be spared no trial or suffering which may be the means of purifying me,
 or of making me of use to others.
-Grave way to trifling conversation this morning, for which I feel self-reproach;
+Gave way to trifling conversation this morning, for which I feel self-reproach;
 our first thoughts ought to be directed to the throne of grace.
 
 5mo. 10th.--In this quiet spot (Durdham Down) may we
@@ -682,7 +682,7 @@ and desiring to see the pathway in which it was
 the purpose of her good Master she should tread,
 the remembrance of a near relative, who had widely wandered from the paths of virtue,
 was accompanied by an abiding belief,
-that it was to be oi use to him that her sojourn
+that it was to be of use to him that her sojourn
 in the wilderness had been thus lengthened.
 
 The following letter was written during this illness to her relatives, in the belief,
@@ -791,9 +791,9 @@ Mary Ann Gilpin.
 
 12mo. 15th.--Under renewed feelings of heartfelt
 gratitude to the great Giver of all good,
-I am at this, time induced to note down the merciful dealings of my heavenly Father,
+I am at this time induced to note down the merciful dealings of my heavenly Father,
 towards one of His very unworthy little ones,
-whilst treading in a path which she "`had not known and which
+whilst treading in a path which she had not known and which
 was outwardly strewed with difficulties and trials.
 In the latter end of the 10th month, 1830, after a long and severe illness,
 my life seemed fast approaching its close,
@@ -801,10 +801,10 @@ and I looked forward with "`joy unspeakable`"--and, I trust,
 with a well grounded hope of immortality--to an early
 entrance on the inheritance of "`the saints in light.`"
 I rejoiced in the unclouded prospect which was graciously permitted me,
-of joining the blessed company who have come out of`" great tribulation,`" and who,
+of joining the blessed company who have come out of great tribulation,`" and who,
 having washed their robes and made them white in the blood of the Lamb,
 are now forever before the throne of God.
-But He, whose ways are not as our ways,`" was pleased, no doubt in unerring wisdom,
+But He, whose ways are not as our ways, was pleased, no doubt in unerring wisdom,
 to stay the hand which appeared stretched out to draw me to Himself; and,
 in a love too perfect for our finite comprehension, He saw meet to detain me here below.
 
@@ -816,7 +816,7 @@ my mind was mercifully kept in perfect peace, being stayed on the Lord; and thou
 when He was pleased to manifest His will concerning me, in my longer tarriance on earth,
 I was ready to query, "`What doest Thou?`"
 I could always rest in confidence that the Judge of the whole earth would do right,
-although the purposes of His dispensations are often hid from our eves.
+although the purposes of His dispensations are often hid from our eyes.
 Before I was able to move in my bed without assistance,
 my heavenly Father was graciously pleased to shew me the path in which I was to walk;
 it was one from which my nature shrunk;
@@ -858,7 +858,7 @@ never can I forget the evening on which I did this; my own weakness seemed overw
 and, for a time,
 I thought I must altogether relinquish what I still believed the path of duty.
 The remembrance of the passage, "`He that knoweth his Lord`'s will, and doeth it not,
-shall be beaten with many stripes painfully arrested my attention,
+shall be beaten with many stripes`" painfully arrested my attention,
 and I dared not resist the precious visitation of the Most High.
 I prayed for strength to tell my father all, and I was indeed sweetly helped;
 he made scarcely any opposition to my plans,
@@ -911,7 +911,7 @@ My ties to life are many and varied;
 too often am I ready to cleave to that which is mortal,
 but I do long to be weaned from this--I do with sincerity
 desire ever to remember that this is not my resting-place!
-Delightful thought! our home h Heaven!
+Delightful thought! our home in Heaven!
 Through the merits and mediation of our Saviour,
 we may look forward to the possession of an inheritance "`eternal in the heavens!`"
 
@@ -976,7 +976,7 @@ and gave Himself for me.`"
 
 19th.--Felt much sympathy this morning with dear +++______+++. Oh how do I
 desire that the faithful standard bearers may be strengthened,
-that they may goon their way with joy;
+that they may go on their way with joy;
 much have I desired this day the advancement of
 that which is good in our society in this place.
 In the afternoon tried with the children; I think I could do, or bear,
@@ -1014,9 +1014,9 @@ I have sincerely raised a petition that they may
 know a being filled with the "`fulness of God.`"
 May they, or may she particularly, though chastened, never be killed; though cast down,
 never be destroyed; but ere long we favoured to partake, in a small degree, at least,
-of hat peace which passeth all understanding.
+of that peace which passeth all understanding.
 
-23rd.--Another week come to a close, and one if much toil and bustle.
+23rd.--Another week come to a close, and one of much toil and bustle.
 The prospect of another lay of rest is most comforting; oh how delightful,
 how inexpressibly sweet will it be, to rest forever "`in Jesus!`"
 But though to depart and be with Him would, I can humbly hope, be great gain, yet,
@@ -1121,7 +1121,7 @@ In the evening, a young friend was with us, who is in very delicate health,
 and who is about to leave home on account of it.
 I have earnestly desired, in my conversation with her,
 to dwell on those subjects which are connected with that which is eternal.
-I do long to see tier established in the faith, built upon the Rock of Ages,
+I do long to see her established in the faith, built upon the Rock of Ages,
 yet how weak am I, how utterly unqualified of myself to lead others onwards.
 May she be taught of God!
 I fear I have, this evening, too much listened to some things spoken against others;
@@ -1177,7 +1177,7 @@ That my heart has bled!`"
 ____
 
 And it is the fervent prayer of my soul that I may, again and again,
-be brought through the refiner`'s tire,
+be brought through the refiner`'s fire,
 until all that belongs to the old man and his deeds is entirely subdued.
 
 25th.--Arose this morning with sincere desires that this last day of my nineteenth year,
@@ -1217,7 +1217,7 @@ yet also sweetly sensible of my heavenly Father`'s
 continued lovingkindness and never failing compassion,
 I have desired to renew my covenant with Him, and, from this day,
 to resign myself into the hands of my gracious Lord--only longing, only craving,
-that His will concerning me may be accomplished, and that I may be His forever..
+that His will concerning me may be accomplished, and that I may be His forever.
 
 27th,--In the evening was favoured to know an increase of strength;
 the all-sufficiency of the atoning sacrifice was brought sweetly before my view,
@@ -1318,7 +1318,7 @@ the retrospect of which is very precious.
 May I be more and more devoted to my heavenly Father`'s service, for in His,
 and His only, is perfect freedom.
 
-10th.---I have, during the past week,
+10th.--I have, during the past week,
 often been permitted to rejoice in the God of my salvation; and though I have,
 at seasons, gone mourning on my way, my heart is filled with thankfulness,
 in the remembrance of past and present mercies,
@@ -1378,7 +1378,7 @@ even of bringing me nearer Him, whom to know is life eternal.
 25th.--The two last days I have been gradually recovering, and today I feel much better,
 though I am not strong enough to bear much; I am, therefore,
 prevented the privilege of being at our quarterly meeting; yet,
-though hot permitted to be out,
+though not permitted to be out,
 I have this morning sweetly experienced communion with the beloved of my soul;
 and I have indeed found the presence of the Comforter
 to be inexpressibly precious and consoling.
@@ -1626,9 +1626,9 @@ in it from my heavenly Guide for proceeding on my way;
 and very earnestly do I long, in the ensuing one,
 to know my faith in Christ increased--even that faith which worketh by love,
 "`to the purifying of the heart.`"
-Never, I think, We I known more ardent and constant longings than of late,
-after complete dedication; and I long to We every idol removed,
-which takes the place my Saviour ought "`to have in my heart.
+Never, I think, have I known more ardent and constant longings than of late,
+after complete dedication; and I long to have every idol removed,
+which takes the place my Saviour ought to have in my heart.
 Oh teach me, gracious Father, for His sake, what thou wouldst have me to do; and oh,
 spare not thine hand, nor let thine eye pity, till thou hast entirely subdued my will,
 and made it thine.
@@ -1788,7 +1788,7 @@ brought very impressively to my remembrance,
 with sincere desires to be enabled entirely to adopt it.
 
 21st.--Suffered loss by yielding to a small temptation.
-The great enemy of our souls`' peace has to (lay much assaulted me,
+The great enemy of our souls`' peace has today much assaulted me,
 and at seasons I have yielded too much to his baits,
 but having been permitted to see some of them, I trust I may, from this time,
 be preserved from them.
@@ -1810,7 +1810,7 @@ and oh that the arm of divine power maybe spread over us,
 shielding and protecting us from evil; still the many dangers which surround,
 at seasons deeply oppress my spirit;
 and I am thus continually reminded that though the spirit is willing,
-the flesh is wry weak.
+the flesh is very weak.
 May this knowledge make me more earnest in pursuing the path of life!--more
 dependent for all help on my gracious guide and friend.
 
@@ -1937,7 +1937,8 @@ ability to give myself up wholly to the Lord,
 and to follow my gracious Saviour in whatever paths He may be
 pleased to lead--even should it be in those of deep suffering.
 May I this day be strengthened from above for all my need.
-Very mercifully strengthened to do what I believed was required with All, all is peace,
+Very mercifully strengthened to do what I believed was required with +++_______+++.
+All, all is peace,
 and my heart is filled with unbounded gratitude to my God for His numberless mercies.
 Took leave of my beloved C+++______+++ friends,
 and had a very peaceful ride to +++_______+++ cottage.
@@ -2051,7 +2052,7 @@ a fresh incitement to faithfulness.
 31st.--The great enemy of souls has this morning endeavoured to shake the faith of mine,
 but in unspeakable mercy, in my season of retirement,
 I was strengthened to find in the "`quiet habitation,`" a refuge from the storm;
-and heartfelt have been my desire after an ability faithfully to pursue my way.
+and heartfelt have been my desires after an ability faithfully to pursue my way.
 May nothing separate me from the love of Christ,
 and oh how do I long to be made "`complete in Him.`"
 
@@ -2606,7 +2607,7 @@ for its promotion in our passage through the wilderness.
 When about to be taken from His followers,
 the disciple "`whom Jesus loved`" was permitted, by His divine Master,
 to recline on His bosom.
-What tender compassion did He ever evince for the weakness o His creatures,
+What tender compassion did He ever evince for the weakness of His creatures,
 and how sweet is it to believe He still regards His
 unworthy little ones with unbounded love and mercy.
 
@@ -2638,7 +2639,7 @@ I have myself longed too earnestly to depart--convinced
 that this has been a temptation of the enemy,
 preventing, as it has done, my attending to present duties,
 I have sought strength from above to resist it,
-and to be enabled fully to adopt the apostle`'s language, "`To mo, to live is Christ,
+and to be enabled fully to adopt the apostle`'s language, "`To me, to live is Christ,
 and to die is gain.`"
 And though to me to die would, I humbly trust, be infinite and eternal gain, yet, also,
 to live is Christ--and oh, may my will be made more conformable to His.
@@ -2683,11 +2684,10 @@ and with earnestness desired divine preservation--
 craving ability to walk in humility and watchfulness,
 and to know the thoughts brought more entirely
 into subjection to the obedience of Christ.
-For my dear +++_______+++, I hare desired the best of blessings.
+For my dear +++_______+++, I have desired the best of blessings.
 During the morning, +++_______+++ called,
 and most kindly expressed her desires on my behalf--I long that they may be realized.
-In the afternoon, had a pleasant ride with my valued friends to.
-
+In the afternoon, had a pleasant ride with my valued friends to +++______+++.
 18th.--This morning my heart was bowed with earnest desires to go faithfully on my way.
 
 26th.-- Rose with earnest desire that the bread this day dispensed amongst us,
@@ -2708,7 +2708,7 @@ But, oh, may I more constantly bear in mind, the strength of my Guide,
 and the help He has promised to those who seek it of Him.
 Permitted, in the evening, richly to partake of sweetly sustaining peace.
 
-8mo. 4th.--To day I am to part from my dearest S+++______+++ and my other valued friends here.
+8mo. 4th.--Today I am to part from my dearest S+++______+++ and my other valued friends here.
 Oh that I may be kept on the watch tower--deeply convinced of the necessity of being so.
 Came to Leominster.
 My heart was, in the evening, almost overpowered with gratitude to my heavenly Father,
@@ -3058,7 +3058,7 @@ Suffered in meeting, from allowing my strong attachments to some dearly loved fr
 to prevent my spending the time there as I ought,
 in worshipping Him whom I at times deeply feel I love, love supremely.
 Oh, thou, who oughtest to have the first place in my affections,
-I pray the for my Saviour`'s sake, to enable me always to acknowledge, with sincerity,
+I pray thee for my Saviour`'s sake, to enable me always to acknowledge, with sincerity,
 that thou hast,
 and oh be pleased to strengthen me to love thy children "`with a pure heart,
 fervently,`" yet not suffer any to take the
@@ -3280,8 +3280,8 @@ yet craving that the spirit of prayer may more constantly
 prevail in my heart--that I may "`pray always.`"
 
 17th.--Almost overpowering feelings of desire for the
-glory of God`" filled my heart before retiring to rest;
-my soul was ready to "`magnify the Lord, my spirit rejoiced in God my Saviour.
+glory of God filled my heart before retiring to rest;
+my soul was ready to magnify the Lord, my spirit rejoiced in God my Saviour.
 After this precious season, should my heavenly Father see meet to try me,
 how do I desire of Him strength for all my need.
 
@@ -3348,7 +3348,7 @@ and spent a considerable time in prayer--fervently
 craving ability to perform the divine will;
 and in faithful obedience I longed to be favoured to know more of "`the heights and
 depths of the love of Christ,`" increasing with the "`increase of God.`"
-Spent most of the afternoon in B Street, where, with intense interest,
+Spent most of the afternoon in B+++_______+++ Street, where, with intense interest,
 I watched my dear brothers and sisters.
 Oh how many,
 many prayers have ascended from my heart for
@@ -3654,11 +3654,11 @@ this day, truly precious, and one of my many mercies! and whilst bowed down in s
 in the evening, inexpressibly sweet was the conviction,
 that we who are yet sojourners here, are still united to those who are gone before us,
 having the same Shepherd.
-And though me yet must drink of the streams,
-and know what it is to thirst again--whilst they are led to living fountains of water?,
+And though we yet must drink of the streams,
+and know what it is to thirst again--whilst they are led to living fountains of waters,
 and will hunger and thirst no more forever--it is but a narrow passage between us,
 and we know not how soon we may be called upon to cross it!
-May we be found with our lamps burning:,
+May we be found with our lamps burning,
 from the constant supplies of the oil of divine love.
 
 12th.--Enabled with much fervency to desire the best
@@ -3763,7 +3763,7 @@ desires had been in becoming a member of their meeting;
 not in my way to burden,
 but to be qualified more and more to feel for them and with them.
 
-12mo. 8th.--One year, to day, has passed away,
+12mo. 8th.--One year, today, has passed away,
 since one of the most precious ties of my existence was
 suddenly severed--since my tenderly loved S+++______+++ was,
 I cannot doubt, through redeeming mercy, permitted to enter the realms of bliss.
@@ -3922,7 +3922,7 @@ Gracious Father!
 I would earnestly beseech thee, for the sake of thy beloved Son,
 to teach me what to ask for, and to pour upon me the spirit of grace and of supplication.
 How solemn is the thought of the rapidity with which time is passing away.
-Ob, my soul! how many have been the blessings showered upon
+Oh, my soul! how many have been the blessings showered upon
 thee!--how deep is thy responsibility!
 The fervent craving of my soul at this time is, that my compassionate Saviour, (and oh,
 how do I rejoice in believing it,) my Intercessor with the Father,
@@ -4106,7 +4106,7 @@ At this moment I feel that I cannot look a day forwards,
 and I would ask of thee ability constantly to leave the morrow
 in thy hands--only craving thy help for the present hour!
 I rejoice in the conviction that thy love is still extended towards me; and,
-under a renewed and deep sense of unworthiness, I would earnestly, pray,
+under a renewed and deep sense of unworthiness, I would earnestly pray,
 that thou wouldst keep, preserve, and strengthen me in the way of thy commandments.
 
 [.offset]
@@ -4197,7 +4197,7 @@ To those of my much loved brothers and sisters who have set their faces Zionward
 be thou a shield from all the darts of the enemy,
 and strengthen them to go forwards--enabling them confidently to
 trust that thou wilt be also their "`exceeding great reward!`"
-And to those of Out family who have not yet tasted of thy goodness,
+And to those of our family who have not yet tasted of thy goodness,
 be graciously pleased still to extend thy omnipotent arm;
 make them deeply sensible of their short coming, and of the precious truth, that thou,
 Lord, art "`good, and ready to forgive,
@@ -4564,7 +4564,7 @@ Many suffer loss, I am convinced, by endeavouring to seek out their states,
 whose daily walk is in conformity to the divine
 will as far as it has been manifested to them.`"
 One evening, when those around her were mourning over her harassing, restless nights,
-"`When I am gone,`" she-said, with a smile,
+"`When I am gone,`" she said, with a smile,
 "`and you think of my many nights of suffering,
 you must remember the perfect rest I shall then be enjoying.
 I shall be
@@ -4593,10 +4593,10 @@ ____
 When we meet to part no more.`"
 ____
 
-I have for so many years earnestly and fervently
+"`I have for so many years earnestly and fervently
 prayed that we all may be reunited in glory,
 that I have faith to believe it will be so.
-Don`'t, don`'t grieve, she continued, "`thou must look upon me as not lost,
+Don`'t, don`'t grieve,`" she continued, "`thou must look upon me as not lost,
 only gone a little before you.`"
 When Henry entered the room she said, "`Well, dear Henry, I seem once more very,
 very near home.`"
@@ -4715,7 +4715,7 @@ whose mind is stayed on thee.`"
 In the afternoon she told her mother, she had been earnestly desiring,
 if consistent with the divine will,
 that she might have a little respite from pain before she was taken from us;
-and the following morning, on her gloved parent entering her room, she exclaimed,
+and the following morning, on her beloved parent entering her room, she exclaimed,
 with a sweet smile, "`Oh I have had such nice sleep!`"
 And for three successive days and nights her supplication was remarkably answered.
 During this time of comparative freedom from suffering,
@@ -4962,7 +4962,7 @@ ____
 She gave a bright smile of intelligence, but did not speak.
 Her mother then said, "`Thy Saviour is with thee, dear, in the dark valley.`"
 She emphatically, but with difficulty, replied,
-"`Oh yes!!`" It was then asked if she was in suffering.
+"`Oh yes!`" It was then asked if she was in suffering.
 With considerable effort, but very distinctly, she replied,
 "`Oh no....no so very.... VERY.... happy!
 These were the last intelligible expressions;
@@ -4981,7 +4981,7 @@ into that glorious city which hath "`no need of the sun, neither of the moon,
 to shine in it, for the glory of the Lord doth lighten it,
 and the Lamb is the light thereof,`"--has joined
 that blissful company which no man can number,
-who,`" with the Father`'s name inscribed upon their foreheads,
+who, with the Father`'s name inscribed upon their foreheads,
 are assembled upon Zion`'s hill,
 and sing the song of praise and thanksgiving to Him who hath redeemed them.
 
