--- a/journal/original/03-letters.adoc
+++ b/journal/original/03-letters.adoc
@@ -92,7 +92,7 @@ Yes, and I could rejoice in the prospect of being engaged, though so very unwort
 in the service of Him to whom I desire to surrender myself entirely,
 and I hope I am willing to give up all things for His sake, remembering with gratitude,
 that the trials and sufferings of this present time "`are not
-worthy to be compared with the glory that shall be revealed.
+worthy to be compared with the glory that shall be revealed.`"
 
 This ride (from Gloucester to Birmingham) was one which I hope I shall long remember.
 A peace which "`passeth all understanding,`" was permitted,
@@ -140,7 +140,7 @@ Supposed 1832.
 Feeling that my long continuance here is peculiarly uncertain, I do,
 my beloved J+++_______+++ wish, as much as possible, for my work to be accomplished.
 It is with this wish that I pen these few lines to my much loved and ever dear sister.
-When I am gone--when this mortal shall have put on immortality`"--may
+When I am gone--"`when this mortal shall have put on immortality`"--may
 I entreat thee to endeavour to follow,
 faithfully to follow, the guidance of the Lord; obey His still small voice within,
 which will assuredly lead thee onwards in the path of life.
@@ -165,7 +165,7 @@ anticipated being much longer together here;
 but though I now believe it to be the divine will that it should be otherwise,
 our separation will not, I trust, be long.
 Thou must think of me; and may I beg thee, as I have so often done,
-to set apart some time each day for waiting upon God`"--thy duties to Him are higher,
+to set apart some time each day for waiting upon God--thy duties to Him are higher,
 and of more importance than any other; thou wouldst find satisfaction in serving Him,
 and I do believe, ere very long, thou wilt find peace.
 Remind the dear children of what I have told them.
@@ -252,7 +252,7 @@ with the natural eye, to discern those things which can only be spiritually disc
 That thou mayest indeed receive fully the Spirit which is of God,
 and be permitted thereby to know "`the things which are freely
 given us of God,`" that He may preserve thee from all evil,
-and lead thee forward in the way everlasting;`" that.
+and lead thee forward in the way everlasting;`" that,
 He may strengthen thee in all things to do His will, is, my endeared brother,
 the fervent prayer of thy much attached sister.
 
@@ -462,7 +462,7 @@ of which we have now so many, shall be forever cast aside,
 and bright and glorious shall be the Christian`'s rest!
 Oh, if we are but permitted, at the close of time,
 to know a transition from its trials to the realms of everlasting blessedness;
-for the way, However painful, by which we have been led,
+for the way, however painful, by which we have been led,
 we shall know the song of thanksgiving to be put
 into our mouths--to Him who hath redeemed us.
 With dearest love, thy affectionately-attached sister.
@@ -1100,7 +1100,7 @@ Do not, oh do not, cast away thy confidence,
 for I do assuredly believe that all things will work together for thy good,
 and that thou wilt be made meet for that inheritance which is "`incorruptible, undefiled,
 and that fadeth not away, reserved in heaven for those who are kept by the power of God,
-through faith, unto salvation!
+through faith, unto salvation!`"
 
 I feel most tenderly for thy bodily sufferings, whilst I humbly trust,
 thou art enabled to trace in them the hand of mercy,
@@ -1250,7 +1250,7 @@ I feel quite ready to resort to any remedy my kind friend, G. D. F.,
 thinks likely to be beneficial;
 I feel sure he will kindly enter into the particulars of my case,
 and it is far more satisfactory to me that he
-should do to than any other person at a distance.
+should do so than any other person at a distance.
 Do not, however, imagine that from desiring this,
 I am at all anxious even for present increased ability for exertion:
 there are moments when, on account of others,
@@ -1277,8 +1277,8 @@ one of the brightest gleams of light resting on my path,
 is produced by the precious hope,
 that I may be strengthened to bear the burdens of some inexpressibly dear to me,
 and thus "`fulfill the law of Christ!`"
-I feel as though I; could thankfully rejoice to be permitted to spread flowers on,
-or even to remove thorns from, the paths I of my many loved ones.
+I feel as though I could thankfully rejoice to be permitted to spread flowers on,
+or even to remove thorns from, the paths of my many loved ones.
 But as I write, I am renewedly made sensible of my own unworthiness, and I deeply feel,
 that of myself I am entirely unable to lend the
 helping hand to any of my fellow travellers,
@@ -1317,13 +1317,13 @@ I am engaged in writing to thee for thy birthday.
 All that a sister can desire of good for thee, I believe I do on the present occasion;
 and perhaps my desires are the more fervent from believing,
 that this is the last on which I can address thee in this manner.
-Yes, my much loved brother the last! for long ere the return of another, my warfare will,
-we cannot but believe, be accomplished; and through "`mercy infinite,`" I humbly trust,
+Yes, my much loved brother! _the last!_ for long ere the return of another, my warfare will
+(we cannot but believe) be accomplished; and through "`mercy infinite,`" I humbly trust,
 I shall have become one of the "`blest inhabitants of Zion!`"
 And thou, I trust, wilt feel another inducement to press forwards in the heavenly race.
 Oh how do I long that thou mayest do so;
 and that thou mayest be the guide and counsellor of our younger brothers.
-Dear H. my heart has often been filled with desires on his account--
+Dear Henry! my heart has often been filled with desires on his account--
 oh tell him that I trust he will give up his heart to the Lord!
 I must not, I believe, add more.
 Accept my dearest love, and give it to dear Henry.
