wrap numbered chunks in .numbered-group

--- a/journal/modernized/02-journal.adoc
+++ b/journal/modernized/02-journal.adoc
@@ -1678,6 +1678,9 @@ will be that rest which remains for the people of God in heaven.
 
 === Questions For Self Examination.
 
+[.numbered-group]
+====
+
 [.numbered]
 Did I begin the day with prayer?
 
@@ -1724,6 +1727,8 @@ Have I remembered all my friends at the throne of grace?
 [.numbered]
 Have I closed the day with seeking the divine protection,
 and in feelings of thankfulness for the preservation experienced?
+
+====
 
 26th.--My birthday!
 Oh you, who have in day past been near to your unworthy child, to shield her from evil,
