--- a/journal/original/02-journal.adoc
+++ b/journal/original/02-journal.adoc
@@ -1683,6 +1683,9 @@ will be that rest which remaineth for the people of God in heaven.
 
 === Questions For Self Examination.
 
+[.numbered-group]
+====
+
 [.numbered]
 Did I begin the day with prayer?
 
@@ -1729,6 +1732,8 @@ Have I remembered all my friends at the throne of grace?
 [.numbered]
 Have I closed the day with seeking the divine protection,
 and in feelings of thankfulness for the preservation experienced?
+
+====
 
 26th.--My birthday!
 Oh thou, who hast in day past been near to thy unworthy child, to shield her from evil,
